@@ -7,6 +7,6 @@ GoogleEarthMapsOverlay.url=http://mt{$servernum}.google.com/vt/lyrs=h@121&hl={$l
 GoogleMapsKorea.url=http://mt{$servernum}.gmaptiles.co.kr/mt/v=kr1.12&hl={$lang}&x={$x}&y={$y}&z={$z}
 GoogleMapMaker.url=http://gt{$servernum}.google.com/mt/n=404&v=gwm.1289&x={$x}&y={$y}&z={$z}
 GoogleMapsChina.url=http://mt{$servernum}.google.cn/vt/v=w2.121&hl={$lang}&gl=cn&x={$x}&y={$y}&z={$z}
-DoCeluPL.baseurl=http://i.wp.pl/m/tiles006/
+DoCeluPL.baseurl=http://i.wp.pl/m/tiles008/
 YandexMap.url=http://vec0{$servernum}.maps.yandex.ru/tiles?l=map&v=2.10.2&x={$x}&y={$y}&z={$z}
 YandexSat.url=http://sat0{$servernum}.maps.yandex.ru/tiles?l=sat&v=1.13.0&x={$x}&y={$y}&z={$z}
